--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Frog Information Hub
                 </h1>
                 <p class="text-lg text-gray-600 mb-8">
-                    Welcome! Please select a page below to learn more about frogs.
+                    Welcome! Please select a page below to learn more.
                 </p>
             </header>
 
@@ -45,6 +45,12 @@
                 <a href="https://jonathanarg.github.io/frog-info-july.html" 
                    class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
                     Frog Info (July)
+                </a>
+
+                <!-- Link to July Merck Info -->
+                <a href="https://jonathanarg.github.io/mrk-info-july.html" 
+                   class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
+                    Merck Info (July)
                 </a>
             </main>
 
