--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <!-- Footer Section -->
             <footer class="mt-12 text-sm text-gray-400">
-                <p>&copy; 2024 JonathanARG. All rights reserved.</p>
+                <p>&copy; 2025 JonathanArg. All rights reserved.</p>
             </footer>
 
         </div>
