--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Information Hub</title>
+    <title>My Information Playground</title>
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts: Inter -->
@@ -37,20 +37,20 @@
             <main class="space-y-6">
                 <!-- Link to May Frog Info -->
                 <a href="https://jonathanarg.github.io/frog-info-may.html" 
-                   class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Frog Info (May)
+                   class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
+                    Frog Info (May 2025)
                 </a>
 
                 <!-- Link to July Frog Info -->
                 <a href="https://jonathanarg.github.io/frog-info-july.html" 
-                   class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Frog Info (July)
+                   class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
+                    Frog Info (July 2025)
                 </a>
 
                 <!-- Link to July Merck Info -->
                 <a href="https://jonathanarg.github.io/mrk-info-july.html" 
                    class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Merck Info (July)
+                    Merck Info (July 2025)
                 </a>
             </main>
 
