--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- Header Section -->
             <header>
                 <h1 class="text-4xl md:text-5xl font-bold text-emerald-600 mb-4">
-                    Frog Information Hub
+                    My Information Playground
                 </h1>
                 <p class="text-lg text-gray-600 mb-8">
                     Welcome! Please select a page below to learn more.
