--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                    class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
                     Merck Info (July 2025)
                 </a>
+
+                <!-- Link to JCyberArk Palo Alto Info -->
+                <a href="https://jonathanarg.github.io/ark.html" 
+                   class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
+                    CyberArk Palo Alto
+                </a>
             </main>
 
             <!-- Footer Section -->
