--- a/mrk-info-july.html
+++ b/mrk-info-july.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device--width, initial-scale=1.0">
     <title>Merck & Co. (MRK) Q2 2025 Earnings Analysis</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -50,6 +50,17 @@
             color: #90E0EF;
             line-height: 1;
         }
+        .explainer-card {
+            background-color: white;
+            border-radius: 0.75rem;
+            padding: 1.5rem;
+            box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+            height: 100%;
+        }
+        .explainer-icon {
+            font-size: 2.5rem;
+            line-height: 1;
+        }
     </style>
 </head>
 <body class="text-gray-800">
@@ -61,11 +72,30 @@
             <p class="text-lg md:text-xl font-semibold" style="color: #0077B6;">Analyzing Merck's Q2 Earnings and its Strategic Pivot for the Future</p>
         </header>
 
-        <section id="intro" class="max-w-4xl mx-auto text-center mb-12 md:mb-16">
-            <h2 class="text-3xl font-bold mb-4" style="color: #03045E;">A Mixed Report, A Clear Direction</h2>
-            <p class="text-md" style="color: #023E8A;">
-                Merck's second-quarter 2025 earnings presented a complex picture. While profitability beat expectations, a revenue miss driven by specific product headwinds led to a negative market reaction. The real story, however, lies in the company's bold strategic plan to fund its next chapter of growth.
-            </p>
+        <section id="simple-explainer" class="mb-12 md:mb-16">
+            <div class="text-center max-w-3xl mx-auto mb-8">
+                <h2 class="text-3xl font-bold mb-4" style="color: #03045E;">The Story in Simple Terms</h2>
+                <p class="text-md" style="color: #023E8A;">
+                    Understanding a company like Merck can be complex. Here’s a simple breakdown of the situation before, during, and after their latest financial report.
+                </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="explainer-card">
+                    <div class="explainer-icon">📜</div>
+                    <h3 class="text-xl font-bold my-2" style="color: #0077B6;">The Past: The Keytruda Challenge</h3>
+                    <p style="color: #023E8A;">Merck's biggest success is a cancer drug called **Keytruda**, which brings in a huge amount of money. However, the patent that protects it will expire in a few years. Investors have been worried about how Merck will replace that income, creating a cloud of uncertainty over the company's future.</p>
+                </div>
+                <div class="explainer-card">
+                    <div class="explainer-icon">📰</div>
+                    <h3 class="text-xl font-bold my-2" style="color: #0077B6;">The Present: A Mixed Report</h3>
+                    <p style="color: #023E8A;">The latest report was a mixed bag. **The Good:** Merck made more profit than expected, and Keytruda is still selling incredibly well. **The Bad:** The company's total sales were lower than last year, mainly because sales of its Gardasil vaccine dropped sharply. The stock price fell because investors were more worried about the sales dip than happy about the profits.</p>
+                </div>
+                <div class="explainer-card">
+                    <div class="explainer-icon">🔭</div>
+                    <h3 class="text-xl font-bold my-2" style="color: #0077B6;">The Future: A New Plan</h3>
+                    <p style="color: #023E8A;">Merck announced a big new plan to solve the Keytruda problem. They will cut **$3 billion** in costs from other parts of the business and reinvest all of that money into discovering and launching new drugs. It's a long-term strategy to build the next generation of blockbuster medicines and secure the company's growth for the next decade.</p>
+                </div>
+            </div>
         </section>
 
         <section id="kpis" class="mb-12 md:mb-16">
