--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Information Playground</title>
+    <title>My New Playground</title>
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts: Inter -->
@@ -26,38 +26,27 @@
             <!-- Header Section -->
             <header>
                 <h1 class="text-4xl md:text-5xl font-bold text-emerald-600 mb-4">
-                    My Information Playground
+                    AI Pages Playground
                 </h1>
                 <p class="text-lg text-gray-600 mb-8">
-                    Welcome! Please select a page below to learn more.
+                    Welcome! Please select a topic below.
                 </p>
             </header>
 
             <!-- Links Section -->
             <main class="space-y-6">
-                <!-- Link to May Frog Info -->
-                <a href="https://jonathanarg.github.io/frog-info-may.html" 
+                <!-- Link Financial overviews -->
+                <a href="https://jonathanarg.github.io/fin.html" 
                    class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Frog Info (May 2025)
+                    Financial AI Infographics
                 </a>
 
-                <!-- Link to July Frog Info -->
+                <!-- Link to Future Categories -->
                 <a href="https://jonathanarg.github.io/frog-info-july.html" 
                    class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Frog Info (July 2025)
+                    Future Category Placeholder
                 </a>
 
-                <!-- Link to July Merck Info -->
-                <a href="https://jonathanarg.github.io/mrk-info-july.html" 
-                   class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Merck Info (July 2025)
-                </a>
-
-                <!-- Link to JCyberArk Palo Alto Info -->
-                <a href="https://jonathanarg.github.io/ark.html" 
-                   class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    CyberArk Palo Alto
-                </a>
             </main>
 
             <!-- Footer Section -->
