--- a/fin.html
+++ b/fin.html
@@ -38,13 +38,13 @@
                 <!-- Link to May Frog Info -->
                 <a href="https://jonathanarg.github.io/frog-info-may.html" 
                    class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Frog Info (May 2025)
+                    JFrog Info (May 2025)
                 </a>
 
                 <!-- Link to July Frog Info -->
                 <a href="https://jonathanarg.github.io/frog-info-july.html" 
                    class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Frog Info (July 2025)
+                    JFrog Info (July 2025)
                 </a>
 
                 <!-- Link to July Merck Info -->
@@ -53,10 +53,16 @@
                     Merck Info (July 2025)
                 </a>
 
-                <!-- Link to JCyberArk Palo Alto Info -->
+                <!-- Link to CyberArk Palo Alto Info -->
                 <a href="https://jonathanarg.github.io/ark.html" 
                    class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
                     CyberArk Palo Alto
+                </a>
+
+                <!-- Link to Cisco Info -->
+                <a href="https://jonathanarg.github.io/cisco.html" 
+                   class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
+                    CISCO Overview
                 </a>
             </main>
 
