--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 </a>
 
                 <!-- Link to Future Categories -->
-                <a href="https://jonathanarg.github.io/frog-info-july.html" 
+                <a href="https://jonathanarg.github.io/cyberfrog-video.html" 
                    class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
-                    Future Category Placeholder
+                    CyberFrog the Magnificent
                 </a>
 
             </main>
@@ -62,6 +62,7 @@
             <!-- Footer Section -->
             <footer class="mt-12 text-sm text-gray-400">
                 <p>&copy; 2025 JonathanArg. All rights reserved.</p>
+                <p>&copy; אין אדם קונה דעתו בפת לחמו </p>
             </footer>
 
         </div>
