--- a/cyberfrog-video.html
+++ b/cyberfrog-video.html
@@ -48,7 +48,7 @@
                 <!-- The video element uses the 'controls' attribute to show play/pause, volume, etc. -->
                 <!-- 'autoplay' and 'muted' are used together, as most browsers block autoplay with sound. -->
                 <!-- 'loop' will make the video restart automatically when it finishes. -->
-                <video class="w-full rounded-lg shadow-2xl border-4 border-gray-200" controls autoplay muted loop>
+                <video class="w-full max-h-[70vh] rounded-lg shadow-2xl border-4 border-gray-200" controls autoplay muted loop>
                     <!-- The source of the video. Since it's in the same repository, the path is direct. -->
                     <source src="cyberfrog1.mp4" type="video/mp4">
                     <!-- This message is shown if the user's browser doesn't support the video tag. -->
