Update fin.html JFROG August

--- a/fin.html
+++ b/fin.html
@@ -74,12 +74,22 @@
                    class="block w-full bg-teal-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
                     CISCO Overview
                 </a>
+
+                <!-- Link to August Frog Info -->
+                <a href="https://jonathanarg.github.io/frog-info-august.html" 
+                   class="block w-full bg-emerald-500 text-white font-bold py-4 px-6 rounded-lg text-xl hover:bg-emerald-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md">
+                    JFrog Info (August 2025)
+                </a>
             </main>
 
-            <!-- Footer Section -->
-            <footer class="mt-12 text-sm text-gray-400">
-                <p>&copy; 2025 JonathanArg. All rights reserved.</p>
-                <p>&copy; אין אדם קונה דעתו בפת לחמו</p>
+            <!-- Navigation and Footer -->
+            <footer>
+                <!-- Link to go back to the main index page -->
+                <a href="./index.html" 
+                   class="inline-block bg-teal-500 text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-teal-600 transition-transform transform hover:scale-105 duration-300 ease-in-out shadow-md mb-8">
+                    &larr; Back to Home
+                </a>
+                <p class="text-sm text-gray-400">&copy; אין אדם קונה דעתו בפת לחמו </p>
             </footer>
 
         </div>
