--- a/bread.html
+++ b/bread.html
@@ -95,6 +95,10 @@
             </div>
         </section>
 
+        <div class="my-12 flex justify-center">
+            <img src="bread.png" alt="איור של לחם המסמל פרנסה ועבודה" class="max-w-md w-full h-auto rounded-lg shadow-lg object-cover border-4 border-white" onerror="this.onerror=null;this.src='https://placehold.co/600x400/FDFBF6/3C3633?text=Image+Not+Found';">
+        </div>
+
         <section id="tension" class="py-16 md:py-24 bg-[#FAF6F0] rounded-2xl my-12">
             <div class="text-center mb-12">
                 <h3 class="text-3xl font-bold">המתח הפילוסופי: קמח מול דעת</h3>
