--- a/bread.html
+++ b/bread.html
@@ -72,7 +72,7 @@
         <nav class="container mx-auto px-6 py-3">
             <div class="flex justify-between items-center">
                 <h1 class="text-xl font-bold text-[#3C3633]">חקר הפתגם</h1>
-                <div class="hidden md:flex items-center space-x-8 lg:space-x-10">
+                <div class="hidden md:flex items-center gap-x-8 lg:gap-x-10">
                     <a href="#proverb" class="nav-link text-gray-600 hover:text-[#E07A5F] border-b-2 border-transparent pb-1">הפתגם</a>
                     <a href="#tension" class="nav-link text-gray-600 hover:text-[#E07A5F] border-b-2 border-transparent pb-1">המתח הפילוסופי</a>
                     <a href="#effort" class="nav-link text-gray-600 hover:text-[#E07A5F] border-b-2 border-transparent pb-1">טבעו של המאמץ</a>
