Update jerusalem.html with jerusalem2.png

--- a/jerusalem.html
+++ b/jerusalem.html
@@ -86,7 +86,7 @@
         </section>
 
         <div class="my-12 flex justify-center">
-            <img src="jerusalem.png" alt="איור של שבועת ירושלים" class="max-w-md w-full h-auto rounded-lg shadow-lg object-cover border-4 border-white" onerror="this.onerror=null;this.src='https://placehold.co/600x400/FDFBF6/3C3633?text=Image+Not+Found';">
+            <img src="jerusalem2.png" alt="איור של שבועת ירושלים" class="max-w-md w-full h-auto rounded-lg shadow-lg object-cover border-4 border-white" onerror="this.onerror=null;this.src='https://placehold.co/600x400/FDFBF6/3C3633?text=Image+Not+Found';">
         </div>
 
         <section id="source" class="py-16 md:py-24 bg-stone-100 rounded-2xl my-12">
